--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,4 +1,16 @@
+@import url("https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&display=swap");
+
 * {
+	font-family: "Merriweather Sans", Arial, system-ui;
 	padding: 0;
 	margin: 0;
+}
+
+a,
+a:link {
+	color: rgb(28, 28, 28);
+}
+
+a:visited {
+	color: rgb(26, 21, 21);
 }
