Added style for .header-container and set the same font-size for its h1 and h2

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -14,3 +14,17 @@ a:link {
 a:visited {
 	color: rgb(26, 21, 21);
 }
+
+.header-container {
+	display: flex;
+	justify-content: space-around;
+	margin: 10px 15px 20px;
+	padding: 20px 5px;
+	background-color: rgb(242, 255, 205);
+	border-radius: 40px;
+}
+
+.header-container h1,
+.header-container h2 {
+	font-size: calc(1.25rem + 6px);
+}
