--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -44,3 +44,20 @@ a:visited {
 	margin-top: 5px;
 	padding: 5px;
 }
+
+.grid-home-container {
+	display: grid;
+	grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+	grid-auto-columns: 1fr;
+}
+
+.launch-container {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	gap: 10px;
+	margin: 20px 10px;
+	padding: 10px;
+	background-color: rgb(255, 245, 255);
+	border-radius: 5px;
+}
