--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -47,17 +47,24 @@ a:visited {
 
 .grid-home-container {
 	display: grid;
-	grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+	grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
 	grid-auto-columns: 1fr;
 }
 
-.launch-container {
+.information-container {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	gap: 10px;
 	margin: 20px 10px;
 	padding: 10px;
-	background-color: rgb(255, 245, 255);
 	border-radius: 5px;
+}
+
+.rose-color {
+	background-color: rgb(255, 245, 255);
+}
+
+.green-color {
+	background-color: rgb(237, 252, 237);
 }
