--- a/src/styles/product.css
+++ b/src/styles/product.css
@@ -44,7 +44,14 @@
 	margin: 10px 5px 30px;
 }
 
-.product-container > h4 {
+.cart-and-image-container {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.cart-and-image-container > h4 {
+    margin-left: -10px;
 }
 
 #quantity-to-cart {
