--- a/src/styles/product.css
+++ b/src/styles/product.css
@@ -74,6 +74,7 @@
 	.all-products-container {
 		grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
 		row-gap: 20px;
+		margin: 10px;
 	}
 
 	.product-description {
@@ -86,6 +87,7 @@
 		grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
 		column-gap: 30px;
 		row-gap: 40px;
+		margin: 20px 30px;
 	}
 
 	.product-description {
