--- a/src/styles/productInCart.css
+++ b/src/styles/productInCart.css
@@ -53,6 +53,10 @@
 }
 
 @media only screen and (max-width: 500px) {
+	.max-width {
+		width: 300px;
+	}
+
 	.products-in-cart-container {
 		max-height: 300px;
 		padding: 20px;
@@ -60,6 +64,10 @@
 }
 
 @media only screen and (min-width: 500px) and (max-width: 800px) {
+	.max-width {
+		width: 500px;
+	}
+
 	.products-in-cart-container {
 		max-height: 400px;
 		padding: 40px;
@@ -67,6 +75,10 @@
 }
 
 @media only screen and (min-width: 800px) {
+	.max-width {
+		width: 700px;
+	}
+
 	.products-in-cart-container {
 		max-height: 500px;
 		padding: 60px;
