--- a/src/styles/productInCart.css
+++ b/src/styles/productInCart.css
@@ -18,7 +18,6 @@
 .products-in-cart-container {
 	display: flex;
 	flex-direction: column;
-	align-items: center;
 	overflow: scroll;
 	row-gap: 20px;
 }
@@ -36,6 +35,7 @@
 .pay-now-container {
 	display: grid;
 	grid-template-columns: repeat(2, 1fr);
+	text-align: center;
 	column-gap: 2.5px;
 	margin-top: 20px;
 	margin-bottom: -2.5%;
