--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -19,12 +19,9 @@ a:visited {
 	display: flex;
 	justify-content: space-around;
 	align-items: center;
-	margin: 10px 15px 20px;
+	margin-bottom: 20px;
 	padding: 10px 5px;
-	background-color: rgb(246, 231, 231);
-	border-radius: 40px;
-	border-top-left-radius: 7.5px;
-	border-top-right-radius: 7.5px;
+	border: 2px solid rgb(238, 238, 238);
 }
 
 .header-container h1,
@@ -83,6 +80,11 @@ a:visited {
 
 .text-centered {
 	text-align: center;
+}
+
+.hided {
+	display: none;
+	visibility: hidden;
 }
 
 .rose-color {
