--- a/src/styles/productInCart.css
+++ b/src/styles/productInCart.css
@@ -54,6 +54,11 @@
 	box-shadow: 0 0.5px 8px 1px rgb(210, 210, 210);
 }
 
+.cart-category-image {
+	margin-right: 10px;
+	margin-bottom: -6.0px;
+}
+
 @media only screen and (max-width: 500px) {
 	.max-width {
 		width: 300px;
