--- a/src/styles/payout.css
+++ b/src/styles/payout.css
@@ -22,8 +22,9 @@
 }
 
 .credit-pay-button {
-    font-size: medium;
+	font-size: medium;
 	align-self: center;
+	margin-bottom: -30px;
 	padding: 20px 35px;
 }
 
@@ -53,13 +54,17 @@
 }
 
 .credit-form > label {
-    margin: 5px 7.5px 2.5px;
+	margin: 5px 7.5px 2.5px;
 }
 
 .credit-form > input {
-    max-width: 350px;
+	border-radius: 10px;
+	border: 1px solid rgb(151, 151, 151);
+	max-width: 350px;
+	margin-bottom: 10px;
+    padding: 12.5px 20px;
 }
 
 .left-spacing {
-    margin-left: 10px;
+	margin-left: 10px;
 }
