Moved margin-left to the Media Queries with different values

--- a/src/styles/productInCart.css
+++ b/src/styles/productInCart.css
@@ -68,6 +68,10 @@
 		max-height: 300px;
 		padding: 20px;
 	}
+
+	.credit-form > input {
+		margin-left: 10px;
+	}
 }
 
 @media only screen and (min-width: 500px) and (max-width: 800px) {
@@ -79,6 +83,10 @@
 		max-height: 400px;
 		padding: 40px;
 	}
+
+	.credit-form > input {
+		margin-left: 30px;
+	}
 }
 
 @media only screen and (min-width: 800px) {
@@ -89,5 +97,9 @@
 	.products-in-cart-container {
 		max-height: 500px;
 		padding: 60px;
+	}
+
+	.credit-form > input {
+		margin-left: 15%;
 	}
 }
