--- a/src/styles/payout.css
+++ b/src/styles/payout.css
@@ -15,6 +15,7 @@
 	box-shadow: 0 0.5px 8px 1px rgb(210, 210, 210);
 	border-radius: 25px;
 	margin-top: 10px;
+	background-color: white;
 }
 
 .google-pay-button {
@@ -62,7 +63,7 @@
 	border: 1px solid rgb(151, 151, 151);
 	max-width: 350px;
 	margin-bottom: 10px;
-    padding: 12.5px 20px;
+	padding: 12.5px 20px;
 }
 
 .left-spacing {
