Added different width, padding-left and padding-right for #credit-cvv and #credit-expiry

--- a/src/styles/payout.css
+++ b/src/styles/payout.css
@@ -69,3 +69,10 @@
 .left-spacing {
 	margin-left: 10px;
 }
+
+#credit-cvv,
+#credit-expiry {
+	width: 70px;
+	padding-left: 40px;
+	padding-right: 20px;
+}
