--- a/src/styles/errorPage.css
+++ b/src/styles/errorPage.css
@@ -1,18 +1,27 @@
-.error-main {
+.error-main,
+.confermation-main {
 	display: flex;
 	justify-content: center;
 	align-items: center;
 }
 
-.error-container {
+.error-container,
+.confermation-container {
 	display: inline-flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
 	margin-top: 15%;
 	padding: 60px 30px;
-	background-color: rgb(255, 245, 255);
 	border-radius: 7.5px;
+}
+
+.error-container {
+	background-color: rgb(255, 245, 255);
+}
+
+.confermation-container {
+	background-color: rgb(239, 253, 240);
 }
 
 .error-container > h2 {
@@ -20,6 +29,15 @@
 }
 
 .error-container > p {
+	color: rgb(140, 0, 0);
+	margin-top: 5px;
+}
+
+.confermation-container > h2 {
+	color: green;
+}
+
+.confermation-container > p {
 	color: rgb(140, 0, 0);
 	margin-top: 5px;
 }
