--- a/src/styles/product.css
+++ b/src/styles/product.css
@@ -65,7 +65,7 @@
 }
 
 #quantity-to-cart {
-	width: 20px;
+	width: 50px;
 }
 
 .update-quantity-container {
@@ -75,7 +75,7 @@
 }
 
 .add-to-cart {
-	margin: 10px 45px 20px;
+	margin: 10px 0 20px;
 	padding: 10px 7.5px;
 	background-color: white;
 	border-radius: 10px;
