--- a/src/styles/product.css
+++ b/src/styles/product.css
@@ -68,6 +68,16 @@
 	width: 50px;
 }
 
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+	-webkit-appearance: none;
+	margin: 0;
+}
+
+input[type="number"] {
+	-moz-appearance: textfield;
+}
+
 .update-quantity-container {
 	display: flex;
 	gap: 10px;
